# stokesToy

./: CMakeLists.txt  README.md  input
examples/: stokes.cpp
include/: boundary.h  debug.h  initialize.h  lagrangian.h  multigrid.h  staggered.h  stokes.h  utilities.h
src/: boundary.cpp  initialize.cpp  lagrangian.cpp  multigrid.cpp  staggered.cpp  stokes.cpp  utilities.cpp
